--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               alt="..." />
             <span
               class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-              >Pande</span
+              >PandeArimbawa</span
             >
           </a>
           <button
